[BF] Fixed spacing below article header

--- a/Assets/css/post.css
+++ b/Assets/css/post.css
@@ -1,5 +1,5 @@
-article header h1 {
-    margin-bottom:0.2em;
+#content article header h1 {
+    margin-bottom:0;
 }
 
 article header h1 a {
